Closed Bug 1295343 Opened 9 years ago Closed 9 years ago

strict aliasing warning in js::WeakMap, very verbose in gcc 6.1.1

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox51 --- fixed

People

(Reporter: sfink, Assigned: sfink)

Details

Attachments

(1 file)

strict aliasing warning in js::WeakMap
The resulting code will additionally fail to compile if you instantiate it with an invalid key type.
Attachment #8781282 - Flags: review?(terrence)
Comment on attachment 8781282 [details] [diff] [review] Fix a strict aliasing warning in js::WeakMap Review of attachment 8781282 [details] [diff] [review]: ----------------------------------------------------------------- \o/
Attachment #8781282 - Flags: review?(terrence) → review+
Pushed by sfink@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/630fc30e522e Fix a strict aliasing warning in js::WeakMap. The resulting code will additionally fail to compile if you instantiate it with an invalid key type.
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: