Bug 1295343 - Fix a strict aliasing warning in js::WeakMap. The resulting code will additionally fail to compile if you instantiate it with an invalid key type.